# ZamSync

./: .all-contributorsrc  .dockerignore  .gitignore  ACKNOWLEDGEMENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  README.md  ROADMAP.md  SECURITY.md  demo.tape  devto_post.md  discord_message.md  docker-compose.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-release.yml  ci.yml  e2e-network.yml  pages.yml  release.yml
crates/zamsync-core/: Cargo.toml
crates/zamsync-core/src/: access.rs  error.rs  event.rs  lib.rs  sync.rs  validation.rs
crates/zamsync-core/src/ports/: event_store.rs  mod.rs  peer_store.rs  state_store.rs  transport.rs
crates/zamsync-network/: Cargo.toml
crates/zamsync-network/src/: lib.rs  tls.rs
crates/zamsync-network/src/protocol/: codec.rs  frame.rs  frame_buf.rs  mod.rs
crates/zamsync-network/src/transport/: mod.rs  tcp.rs  tls_tcp.rs
crates/zamsync-network/src/transport/tcp/: mod.rs  peer.rs  transport.rs
crates/zamsync-network/src/transport/tls_tcp/: mod.rs  peer.rs  transport.rs
crates/zamsync-network/tests/: tcp_sync_test.rs
crates/zamsync-storage/: Cargo.toml
crates/zamsync-storage/src/: encryption.rs  engine.rs  lib.rs  peer.rs  sorter.rs  state.rs  sync_session.rs  wal.rs
crates/zamsync-storage/src/adapters/: file_peer_store.rs  mod.rs  wal_event_store.rs
crates/zamsync-storage/tests/: compaction_test.rs  concurrent_test.rs  convergence_test.rs  crash_test.rs  engine_test.rs  enospc_test.rs  peer_test.rs  rekey_test.rs  sorter_test.rs  sync_test.rs
crates/zamsync-testing/: Cargo.toml
crates/zamsync-testing/src/: lib.rs  sync.rs
crates/zamsync-testing/src/adapters/: in_memory_event_store.rs  in_memory_peer_store.rs  mock_transport.rs  mod.rs
deploy/: install.sh  zamsync-daemon.service  zamsync.env  zamsync.service
docs/: book.toml
docs/demos/: access-control.tape  encryption.tape  quickstart.tape  security.tape
docs/src/: SUMMARY.md  error-codes.md  introduction.md  rest-api.md
src/: dashboard.html  http.rs  main.rs  metrics.rs  util.rs
src/cmd/: audit.rs  bench.rs  daemon.rs  info.rs  keygen.rs  mod.rs  project.rs  project_pg.rs  rekey.rs  serve.rs  sign.rs  snapshot.rs  submit.rs  sync.rs
tests/: Dockerfile.network  Dockerfile.test  README.md  cli_integration.rs  docker-compose.network.yml  docker-compose.security.yml  docker-compose.test.yml  network_scenario.sh  prometheus.yml  real_world_bhutan_test.sh  report.py  security_access_test.sh
vagrant/: README.md  Vagrantfile
vagrant/ansible/: inventory.ini
vagrant/ansible/group_vars/: all.yml  clinics.yml  hub.yml
vagrant/ansible/playbooks/: degrade-network.yml  provision.yml  restore-network.yml  scenario.yml
vagrant/ansible/roles/zamsync/handlers/: main.yml
vagrant/ansible/roles/zamsync/tasks/: main.yml
vagrant/ansible/roles/zamsync/templates/: zamsync-serve.service.j2
vagrant/ansible/scripts/: report.py
vagrant/results/: .gitkeep
