[workspace]
resolver = "2"
members = [
    ".",
    "crates/zamsync-core",
    "crates/zamsync-storage",
    "crates/zamsync-network",
    "crates/zamsync-testing",
]

[package]
name = "zamsync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[workspace.package]
version = "1.0.1"
edition = "2021"
authors = ["ZamSync Contributors"]
license = "MIT"
description = "Resilient Offline-First Synchronization Engine"

[dependencies]
zamsync-storage = { path = "crates/zamsync-storage" }
zamsync-network = { path = "crates/zamsync-network" }
zamsync-core = { path = "crates/zamsync-core" }
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus = "0.15"
sha2.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[workspace.dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
rkyv = { version = "0.7", features = ["validation", "bytecheck"] }
bytecheck = "0.6"
crc32fast = "1.4"
byteorder = "1.5"
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd = "0.13"
metrics = "0.23"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
