[package]
name = "zamsync-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
rkyv = { version = "0.7", features = ["validation", "bytecheck"] }
bytecheck = "0.6"

[features]
serde = ["dep:serde"]
