[package]
name = "zamsync-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }
rkyv.workspace = true
bytecheck.workspace = true

[features]
serde = ["dep:serde"]
