[package]
name = "zamsync-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types, traits, and protocol messages for the ZamSync sync engine"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_json.workspace = true
rkyv.workspace = true
bytecheck.workspace = true

[features]
serde = ["dep:serde"]
