[package]
name = "zamsync-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
zamsync-core = { path = "../zamsync-core" }
rkyv.workspace = true
byteorder.workspace = true
log.workspace = true

[dev-dependencies]
zamsync-storage = { path = "../zamsync-storage" }
tempfile.workspace = true
