[package]
name = "zamsync-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TCP and mTLS transport for the ZamSync distributed sync engine"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zamsync-core = { version = "1.0.3", path = "../zamsync-core" }
rkyv.workspace = true
byteorder.workspace = true
log.workspace = true
tracing.workspace = true
zstd.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rcgen.workspace = true

[dev-dependencies]
zamsync-storage = { version = "1.0.3", path = "../zamsync-storage" }
tempfile.workspace = true
time = "0.3"
