[package]
name = "zamsync-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
zamsync-core = { path = "../zamsync-core" }
chacha20poly1305 = "0.10"
crc32fast.workspace = true
byteorder.workspace = true
log.workspace = true
rkyv.workspace = true
tracing.workspace = true
metrics.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
zamsync-testing = { path = "../zamsync-testing" }