[package]
name = "zamsync-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WAL-backed event store with ChaCha20-Poly1305 encryption for ZamSync"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zamsync-core = { version = "1.0.3", path = "../zamsync-core" }
chacha20poly1305 = "0.10"
crc32fast.workspace = true
byteorder.workspace = true
log.workspace = true
rkyv.workspace = true
tracing.workspace = true
metrics.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
zamsync-testing = { version = "1.0.3", path = "../zamsync-testing" }